Changing Scala samples integration tests to always use Zinc compiler
+review REVIEW-5802